# simple-etl-excersise

./: README.md  main.py  pyproject.toml  setup.cfg
backend/common/models/: cart_dto.py  most_ordered_category_dto.py  product_dto.py  product_from_cart_dto.py  user_dto.py
backend/common/utils/: coordinates_util.py  file_util.py  logger.py
backend/controller/: controller.py
backend/data_txt/: carts.txt  most_ordered_categories.txt  products.txt  products_from_carts.txt  users.txt
backend/database/: sqlite_database.db  sqlite_database.py
backend/database/entities/: product_from_cart.py  user.py
backend/domain/carts/: cart_service.py
backend/domain/categories/: category_service.py
backend/domain/entities/: cart.py  product.py
backend/domain/products/: product_service.py
backend/domain/products_from_carts/: product_from_cart_service.py
backend/domain/services/: product_from_cart_service.py
backend/domain/users/: user_service.py
backend/dummy_json_api/: dummy_json_api.py
backend/interfaces/: cart_service_interface.py  category_service_interface.py  dummy_json_api_interface.py  product_from_cart_service_interface.py  product_service_interface.py  user_service_interface.py
backend/test/domain/carts/: test_cart_service.py
backend/test/domain/services/: test_cart_service.py  test_product_from_cart_service.py  test_product_service.py  test_user_service.py
